add commands page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,3 +28,4 @@ nav:
   - Configuration: 'configuration.md'
   - Templates: 'templates.md'
   - Components: 'components.md'
+  - Commands: 'commands.md'
